# Guidewire_Tip_Detection_Network

./: .gitignore  1005_train.sh  README.md  conda_environment.yaml  labeler.py  mag22_train.sh  package.xml  setup.cfg  setup.py  test_gwtd.sh  train_gwtd.sh  train_multiple_configs.sh  verify_jpg_conversion.py  video_to_images.py
engine/: analyze_dataset.py  compare_results.py  main.py  organize_dataset.py  run_test_on_selected_datasets.py  test.py  test_backbone.py  test_dataset.py  test_lr.py  test_prediction.py  test_unfreeze.py  test_validation.py  test_validation_single_batch.py  train_without_freeze.py  visualize_test_dataset.py  visualize_window_acc.py
gwtd/augmentation/: pixel_coords.py
gwtd/config/: default.yaml  ver3_default.yaml  ver3_default_ema_long_soft.yaml  ver3_default_epoch_45.yaml  ver3_default_epoch_45_soft.yaml  ver3_default_epoch_50_soft_unfreeze_4.yaml  ver3_default_epoch_50_soft_unfreeze_4_heat_map_sigma_2.yaml  ver3_default_epoch_50_soft_unfreeze_4_heat_map_sigma_3.yaml  ver3_default_hidden_128.yaml  ver3_default_hidden_144.yaml  ver3_default_high_weight_decay.yaml  ver3_default_more_crop.yaml  ver3_default_more_crop_unfreeze_3.yaml  ver3_default_unfreeze_3.yaml  ver3_default_unfreeze_3_warmup_1.yaml  ver3_default_unfreeze_4_warmup_2_5.yaml
gwtd/data_loader/: guidewire_data_loader.py
gwtd/detector/: detector.py
gwtd/loss/: loss.py
gwtd/nets/: nn.py
gwtd/utils/: standardization.py  training_utils.py  util.py
results/default/: config.yaml  config_test.yaml
test/: sanity_dump_augs.py  test_augment.py
(+3 files in other folders)
